--- a/querydsl-codegen/pom.xml
+++ b/querydsl-codegen/pom.xml
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>com.mysema.querydsl</groupId>
       <artifactId>querydsl-core</artifactId>
-      <version>${project.version}</version>
+      <version>${parent.version}</version>
     </dependency>  
     <dependency>
       <groupId>com.mysema.codegen</groupId>
@@ -83,4 +83,5 @@
     </plugins>
   </build>
 
+  <version>3.6.3.BUILD-SNAPSHOT</version>
 </project>
