--- a/querydsl-core/pom.xml
+++ b/querydsl-core/pom.xml
@@ -11,6 +11,7 @@
 
   <groupId>com.mysema.querydsl</groupId>
   <artifactId>querydsl-core</artifactId>
+  <version>3.6.3.BUILD-SNAPSHOT</version>
   <name>Querydsl - Core module</name>
   <description>core module for querydsl</description>
   <url>${project.homepage}</url>
