--- a/querydsl-sql/pom.xml
+++ b/querydsl-sql/pom.xml
@@ -29,12 +29,12 @@
     <dependency>
       <groupId>com.mysema.querydsl</groupId>
       <artifactId>querydsl-core</artifactId>
-      <version>3.6.2.BUILD-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>com.mysema.querydsl</groupId>
       <artifactId>querydsl-spatial</artifactId>
-      <version>3.6.2.BUILD-SNAPSHOT</version>
+      <version>${parent.version|</version>
       <optional>true</optional>
     </dependency>
     <dependency>
