--- a/querydsl-sql/pom.xml
+++ b/querydsl-sql/pom.xml
@@ -30,6 +30,8 @@
       <groupId>com.mysema.querydsl</groupId>
       <artifactId>querydsl-core</artifactId>
       <version>${project.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.mysema.querydsl</groupId>
