--- a/querydsl-codegen/pom.xml
+++ b/querydsl-codegen/pom.xml
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>com.mysema.querydsl</groupId>
       <artifactId>querydsl-core</artifactId>
-      <version>${parent.version}</version>
+      <version>${project.version}</version>
     </dependency>  
     <dependency>
       <groupId>com.mysema.codegen</groupId>
