--- a/querydsl-root/pom.xml
+++ b/querydsl-root/pom.xml
@@ -52,6 +52,8 @@
       *
     </osgi.import.package.root>
     <osgi.import.package>${osgi.import.package.root}</osgi.import.package>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
      
   <dependencies>
@@ -361,6 +363,15 @@
             <version>2.16</version>
           </dependency>
         </dependencies>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.2</version>
+        <configuration>
+          <source>${maven.compiler.source}</source>
+          <target>${maven.compiler.target}</target>
+        </configuration>
       </plugin>
     </plugins>
   </build>
