--- a/querydsl-spatial/pom.xml
+++ b/querydsl-spatial/pom.xml
@@ -19,7 +19,7 @@
     <dependency>
       <groupId>com.mysema.querydsl</groupId>
       <artifactId>querydsl-core</artifactId>
-      <version>${project.version}</version>
+      <version>3.6.3.BUILD-SNAPSHOT</version>
     </dependency>
 
     <dependency>
@@ -32,7 +32,7 @@
     <dependency>
       <groupId>com.mysema.querydsl</groupId>
       <artifactId>querydsl-core</artifactId>
-      <version>${project.version}</version>
+      <version>3.6.3.BUILD-SNAPSHOT</version>
       <scope>test</scope>
       <type>test-jar</type>
     </dependency>
